--- a/secondpage.html
+++ b/secondpage.html
@@ -1,90 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="homepage.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>INDEX.HTML</title>
-</head>
-<body>
-    <p>INTERACTION LAB & STUDIO </p> <p>HELLO! MY NAME IS LILY. WELCOME TO MY PAGE! <br>
-
-</body> <BR></BR>
-<a href="xpage.html"> REVERSE ENGINEERING </a>
-    </a>
-</a> <br>
-<a href="firstpage.html">QUESTIONAIRE</a>
-    </a>
-</a> <br>
-<a href="mindex.html">STORIES AS NETWORKS</a>
-    </a>
-</a> <br>
-<a href="main.html"> WOMENS' RESOURCES (DATA COLLECTION) </a>
-    </a>
-</a> <br>
-<a href="thirdpage.html">MEMORIES (ELASTIC COLLECTION) </a>
-    </a>
-</a>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprinkling Hearts</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Kaisei+Tokumin&display=swap" rel="stylesheet">
     <style>
-        body {
-           
-            overflow: hidden; /* Prevents horizontal scrolling */
-        }
-        
-        .heart {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background-color: red;
-            transform: rotate(45deg);
-            animation: float 5s linear infinite; /* Adjust duration and animation type as needed */
-        }
+         body{
+      background-image: url('paper.jpeg');
+    }
 
-        @keyframes float {
-            0% {
-                transform: translateY(0) translateX(0) rotate(45deg);
-            }
-            50% {
-                transform: translateY(-20px) translateX(-20px) rotate(45deg); /* Adjust the height and width of the float */
-            }
-            100% {
-                transform: translateY(0) translateX(0) rotate(45deg);
-            }
-        }
+
+    h1{
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 90pt;
+      text-shadow: 5px 0px 100px #fff,5px 0px 100px #fff,0px 0px 100px #fff,0px 0px 100px #fff;
+      color: #E7E5D9;
+      position: sticky;
+      padding-left: 5vw;
+      filter: blur(1px);
+      filter: opacity(80%);
+      margin-bottom: 10vh;
+      margin-top: 1vh;
+    }
+
+    h2{
+      font-family: 'Kaisei Tokumin', serif;
+      font-size: 180pt;
+      text-shadow: 5px 0px 100px #fff,5px 0px 100px #fff,0px 0px 100px #fff;
+      color: #E7E5D9;
+      padding-left: 30vw;
+      padding-bottom: 0px;
+      filter: blur(2px);
+      opacity: 75%;
+      margin-top: 20vh;
+      position: absolute;
+      z-index: 1;
+
+    }
+
+
+    .links{
+      font-family: 'Cormorant Garamond', serif;
+      text-align: left;
+      color: #A89D87; 
+      font-size: 28pt;
+      padding-left: 2vw;
+      filter: blur(0.4px);
+      margin-top: 2vh;
+      position: absolute;
+      z-index: 2;
+      transition: opacity 1s;
+    }
+    ul {
+  list-style-type: none;
+}
+a:link    { color: #A89D87; text-decoration: none;
+  transition: opacity 0.5s; }
+a:visited { color: #A89D87;}
+a:hover   {opacity: 0.4;} 
+
+
     </style>
-</head>
-<body>
-    <!-- JavaScript to create multiple hearts -->
-    <script>
-        // Function to create a heart element
-        function createHeart() {
-            const heart = document.createElement('div');
-            heart.classList.add('heart');
-            heart.style.left = Math.random() * window.innerWidth + 'px'; // Random horizontal position
-            heart.style.top = Math.random() * window.innerHeight + 'px'; // Random vertical position
-            document.body.appendChild(heart);
-            setTimeout(() => {
-                heart.remove();
-            }, 5000); // Remove heart after 5 seconds
-        }
+  </head>
+  <body>
+    <h1>in praise of shadows</h1>
 
-        // Function to create hearts continuously
-        function sprinkleHearts() {
-            setInterval(createHeart, 100); // Adjust interval as needed
-        }
+    <div class="links">
+      <ul>
+      <li>
+      <a href="./a-page.html" target="_self">beneath the eaves</a>
+     </li> 
+     <li>
+      <a href="./b-page.html" target="_self">in making ourselves a place to live</a>
+    </li> 
+    <li>
+      <a href="./d-page.html" target="_self">ashen walls bereft of ornament</a>
+    </li> 
+    <li>
+     <a href="./g-page.html" target="_self">scrolls & alcoves</a>
+   </li>  
+         <li>
+       <a href="./h-page.html" target="_self">the pale white glow of shoji</a>
+     </li> 
+     <li>
+      <a href="./k-one-page.html" target="_self">a distant glimmer from the garden</a>
+    </li> 
+    <li>
+     <a href="./n-page.html" target="_self">gold leaves</a>
+   </li> 
+    </ul>
+  </div>
+  <a href="secondpage.html">
+    <a href="secondpage.html">BACK</a>
+    </a>
 
-        // Start sprinkling hearts
-        sprinkleHearts();
-    </script>
-</body>
+  <h2>
+    影の多い
+  </h2>
+<div id="containers">
+<div id="h1">
+
+</div>
+
+<div id="links">
+
+</div>
+
+<div id="h2">
+
+</div>
+
+</div>
+  </body>
 </html>
